--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -15,7 +15,7 @@ token.message=Su token es:
 auth.message.disabled=Su cuenta no esta habilitada. Hemos enviado a su correo un link para habilitar su cuenta.
 auth.message.expired=Su ficha de registro ha caducado, por favor registrese de nuevo.
 auth.message.invalidUser=Este nombre de usuario es invalido o no existe.
-auth.message.invalidToken=Codigo de confirmacion incorrecto.
+auth.message.invalidToken=Codigo incorrecto.
 label.user.email=Correo Electronico:
 label.user.firstName=Nombre:
 label.user.lastName=Apellido:
