--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,7 +15,7 @@ token.message=Your token is:
 auth.message.disabled=Your account is disabled please check your mail and click on the confirmation link
 auth.message.expired=Your registration token has expired. Please register again.
 auth.message.invalidUser=This username is invalid, or does not exist.
-auth.message.invalidToken=Invalid account confirmation token.
+auth.message.invalidToken=Invalid token.
 label.user.email=Email:
 label.user.firstName=First name:
 label.user.lastName=Last name:
