track users example

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,6 +35,7 @@ label.pages.logout=Logout
 label.pages.admin=Administrator
 label.pages.home.title=Home
 label.pages.home.message=Welcome Home
+label.pages.users.message=View Logged In Users
 label.pages.admin.message=Welcome Admin
 label.pages.user.message=Welcome User
 label.successRegister.title=Registration Success
