Adds Google's reCaptcha to the registration page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -69,6 +69,8 @@ message.error=Error Occurred
 message.updatePasswordSuc=Password updated successfully
 message.changePassword=Change Password
 message.invalidOldPassword=Invalid Old Password
+message.invalidReCaptcha=Invalid reCaptcha
+message.unavailableReCaptcha=Registration is unavailable at this time.  Please try again later.
 label.user.newPassword=New Password
 label.user.oldPassword=Old Password
 error.wordLength=Your password is too short
