--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -68,6 +68,8 @@ message.error=Se produjo un error
 message.updatePasswordSuc=Contraseña actualizado correctamente
 message.changePassword=Cambiar La Contraseña
 message.invalidOldPassword=Inválida contraseña antigua
+message.invalidReCaptcha=Inválida reCaptcha
+message.unavailableReCaptcha=Registrarse no disponible en este momento . Por favor, inténtelo de nuevo más tarde.
 label.user.newPassword=Nueva Contraseña
 label.user.oldPassword=Contraseña Anterior
 error.wordLength=Tu contraseña es demasiado corta
