--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -31,6 +31,7 @@ label.form.loginPass=Password
 label.form.loginEnglish=English
 label.form.loginSpanish=Spanish
 label.form.loginSignUp=Sign up
+label.form.loginSignUpCaptcha=Sign up with Captcha
 label.pages.logout=Logout
 label.pages.admin=Administrator
 label.pages.home.title=Home
