--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -31,6 +31,7 @@ label.form.loginPass=Contrasenia
 label.form.loginEnglish=Ingles
 label.form.loginSpanish=Espaniol
 label.form.loginSignUp=Registrese
+label.form.loginSignUpCaptcha=Registrese Captcha
 label.pages.logout=Salir
 label.pages.admin=Administrador
 label.pages.home.title=Inicio
