add two step verification

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,7 +1,7 @@
 message.username=Username required
 message.password=Password required
 message.unauth=Unauthorized Access !!
-message.badCredentials=Invalid Username or Password
+message.badCredentials=Invalid Credentials
 message.sessionExpired=Session Timed Out
 message.logoutError=Sorry, error logging out
 message.logoutSucc=You logged out successfully
@@ -21,6 +21,7 @@ label.user.firstName=First name:
 label.user.lastName=Last name:
 label.user.password=Password:
 label.user.confirmPass=Confirm password
+label.user.2fa=Use Two step verification
 label.form.submit=Submit
 label.form.title=Registration Form
 label.form.loginLink=Back to login
@@ -28,6 +29,7 @@ label.login=Login here
 label.form.loginTitle=Login
 label.form.loginEmail=Email
 label.form.loginPass=Password
+label.form.login2fa=Google Authenticator Verification Code
 label.form.loginEnglish=English
 label.form.loginSpanish=Spanish
 label.form.loginSignUp=Sign up
