--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,7 +1,7 @@
 message.username=Por favor ingrese el nombre de usuario
 message.password=Por favor ingrese una clave
 message.unauth=Acceso denegado !!
-message.badCredentials=Usuario o clave invalida
+message.badCredentials=credenciales no válidas
 message.sessionExpired=La sesion expiro
 message.logoutError=Lo sentimos, hubo problemas al salir
 message.logoutSucc=Salida con exito
@@ -21,6 +21,7 @@ label.user.firstName=Nombre:
 label.user.lastName=Apellido:
 label.user.password=Contrasenia:
 label.user.confirmPass=Confirme la contrasenia
+label.user.2fa=Utilizar la verificación en dos pasos
 label.form.submit=Enviar
 label.form.title=Formulario de Registro
 label.login=Autehtifiquese aqui
@@ -28,6 +29,7 @@ label.form.loginTitle=Ingreso
 label.form.loginLink=Regrese a autentificacion
 label.form.loginEmail=Correo Electronico
 label.form.loginPass=Contrasenia
+label.form.login2fa=Google Authenticator Código de verificación
 label.form.loginEnglish=Ingles
 label.form.loginSpanish=Espaniol
 label.form.loginSignUp=Registrese
