--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -39,6 +39,7 @@ label.pages.admin=Administrator
 label.pages.home.title=Home
 label.pages.home.message=Welcome Home
 label.pages.users.message=View Logged In Users
+label.pages.users.sessionregistry.message=View Logged In Users from SessionRegistry
 label.pages.admin.message=Welcome Admin
 label.pages.user.message=Welcome User
 label.successRegister.title=Registration Success
