--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -82,3 +82,5 @@ error.wordLowercase=Utilice caracteres en minúsculas
 error.wordUppercase=Utilice mayúsculas
 error.wordOneNumber=Utilice números
 error.wordOneSpecialChar=Utilice los caracteres especiales
+message.differentLocation=Hubo un intento de inicio de sesión desde una ubicación inusual en {0}, bloqueamos la conexión que era de {1} con la dirección IP {2} \r\n Si ese era tu, habilita esta nueva ubicación en {3} \r\n Si no fuiste tú, entonces Necesita cambiar su contraseña {4}message.newLoc.enabled = Nueva ubicación {0} ahora está habilitada
+auth.message.unusual.location = Estás intentando iniciar sesión desde una ubicación inusual, consulta tu correo electrónico para obtener más detalles
