fix back-end validation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -46,6 +46,9 @@ label.successRegister.title=Registration Success
 label.badUser.title=Invalid Link
 ValidEmail.user.email=Invalid email address!
 UniqueUsername.user.username=An account with that username/email already exists
+Size.userDto.firstName=Length must be greater than {min}
+Size.userDto.lastName=Length must be greater than {min}
+Size.userDto.email=Length must be greater than {min}
 NotNull.user.firstName=First name required
 NotEmpty.user.firstName=First name required
 NotNull.user.lastName=Last name required
