add remember me

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -34,6 +34,7 @@ label.form.loginEnglish=English
 label.form.loginSpanish=Spanish
 label.form.loginSignUp=Sign up
 label.form.loginSignUpCaptcha=Sign up with Captcha
+label.form.rememberMe=Remember Me
 label.pages.logout=Logout
 label.pages.admin=Administrator
 label.pages.home.title=Home
