--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -34,6 +34,7 @@ label.form.loginEnglish=Ingles
 label.form.loginSpanish=Espaniol
 label.form.loginSignUp=Registrese
 label.form.loginSignUpCaptcha=Registrese Captcha
+label.form.rememberMe=Recuérdame
 label.pages.logout=Salir
 label.pages.admin=Administrador
 label.pages.home.title=Inicio
