BAEL-1332 - Login notification

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -88,3 +88,6 @@ error.wordLowercase=Use lower case characters
 error.wordUppercase=Use upper case characters
 error.wordOneNumber=Use numbers
 error.wordOneSpecialChar=Use special characters
+message.login.notification.deviceDetails=Device details:
+message.login.notification.location=Location:
+message.login.notification.ip=IP Address:
