--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,7 +1,7 @@
 message.username=Por favor ingrese el nombre de usuario
 message.password=Por favor ingrese una clave
 message.unauth=Acceso denegado !!
-message.badCredentials=credenciales no válidas
+message.badCredentials=credenciales no vï¿½lidas
 message.sessionExpired=La sesion expiro
 message.logoutError=Lo sentimos, hubo problemas al salir
 message.logoutSucc=Salida con exito
@@ -21,7 +21,7 @@ label.user.firstName=Nombre:
 label.user.lastName=Apellido:
 label.user.password=Contrasenia:
 label.user.confirmPass=Confirme la contrasenia
-label.user.2fa=Utilizar la verificación en dos pasos
+label.user.2fa=Utilizar la verificaciï¿½n en dos pasos
 label.form.submit=Enviar
 label.form.title=Formulario de Registro
 label.login=Autehtifiquese aqui
@@ -29,12 +29,12 @@ label.form.loginTitle=Ingreso
 label.form.loginLink=Regrese a autentificacion
 label.form.loginEmail=Correo Electronico
 label.form.loginPass=Contrasenia
-label.form.login2fa=Google Authenticator Código de verificación
+label.form.login2fa=Google Authenticator Cï¿½digo de verificaciï¿½n
 label.form.loginEnglish=Ingles
 label.form.loginSpanish=Espaniol
 label.form.loginSignUp=Registrese
 label.form.loginSignUpCaptcha=Registrese Captcha
-label.form.rememberMe=Recuérdame
+label.form.rememberMe=Recuï¿½rdame
 label.pages.logout=Salir
 label.pages.admin=Administrador
 label.pages.home.title=Inicio
@@ -52,34 +52,37 @@ NotEmpty.user.lastName=Por favor ingrese su apellido
 NotNull.user.username=Por favor ingrese su cuenta de email
 NotEmpty.user.username=Por favor ingrese su cuenta de email
 NotNull.user.password=Por favor ingrese su clave
-NotEmpty.user.password=Por favor ingrese su contraseña
+NotEmpty.user.password=Por favor ingrese su contraseï¿½a
 NotNull.user.matchingPassword=Campo obligatirio
 NotEmpty.user.matchingPassword=Campo obligatrio
 PasswordMatches.user:Las claves no coinciden!
 Email.user.email=Email no es valido
 label.form.resendRegistrationToken=Reenviar mensaje de emergencia
-message.resendToken=Te enviaremos un correo electrónico con un nuevo token de registro en su cuenta de correo electrónico
-message.forgetPassword=Olvide la contraseña
-message.resetPassword=Restablecer contraseña
-message.updatePassword=Actualizar contraseña
+message.resendToken=Te enviaremos un correo electrï¿½nico con un nuevo token de registro en su cuenta de correo electrï¿½nico
+message.forgetPassword=Olvide la contraseï¿½a
+message.resetPassword=Restablecer contraseï¿½a
+message.updatePassword=Actualizar contraseï¿½a
 message.userNotFound=Usuario no encontrado
 auth.message.blocked=Esta IP se bloquea durante 24 horas
-message.accountVerified=Su cuenta verificada con éxito
-message.resetPasswordSuc=Contraseña reajusta correctamente
-message.resetYourPassword=Restablecer su contraseña
-message.resetPasswordEmail=Te enviaremos un correo electrónico para restablecer su contraseña
+message.accountVerified=Su cuenta verificada con ï¿½xito
+message.resetPasswordSuc=Contraseï¿½a reajusta correctamente
+message.resetYourPassword=Restablecer su contraseï¿½a
+message.resetPasswordEmail=Te enviaremos un correo electrï¿½nico para restablecer su contraseï¿½a
 message.error=Se produjo un error
-message.updatePasswordSuc=Contraseña actualizado correctamente
-message.changePassword=Cambiar La Contraseña
-message.invalidOldPassword=Inválida contraseña antigua
-message.invalidReCaptcha=Inválida reCaptcha
-message.unavailableReCaptcha=Registrarse no disponible en este momento . Por favor, inténtelo de nuevo más tarde.
-label.user.newPassword=Nueva Contraseña
-label.user.oldPassword=Contraseña Anterior
-error.wordLength=Tu contraseña es demasiado corta
-error.wordNotEmail=No utilice su dirección de correo electrónico como contraseña
-error.wordSequences=Su contraseña contiene secuencias
-error.wordLowercase=Utilice caracteres en minúsculas
-error.wordUppercase=Utilice mayúsculas
-error.wordOneNumber=Utilice números
+message.updatePasswordSuc=Contraseï¿½a actualizado correctamente
+message.changePassword=Cambiar La Contraseï¿½a
+message.invalidOldPassword=Invï¿½lida contraseï¿½a antigua
+message.invalidReCaptcha=Invï¿½lida reCaptcha
+message.unavailableReCaptcha=Registrarse no disponible en este momento . Por favor, intï¿½ntelo de nuevo mï¿½s tarde.
+label.user.newPassword=Nueva Contraseï¿½a
+label.user.oldPassword=Contraseï¿½a Anterior
+error.wordLength=Tu contraseï¿½a es demasiado corta
+error.wordNotEmail=No utilice su direcciï¿½n de correo electrï¿½nico como contraseï¿½a
+error.wordSequences=Su contraseï¿½a contiene secuencias
+error.wordLowercase=Utilice caracteres en minï¿½sculas
+error.wordUppercase=Utilice mayï¿½sculas
+error.wordOneNumber=Utilice nï¿½meros
 error.wordOneSpecialChar=Utilice los caracteres especiales
+message.login.notification.deviceDetails=Detalles del dispositivo:
+message.login.notification.location=Ubicacion:
+message.login.notification.ip=Direccion IP:
